--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <style>
+    h1 {
+    text-align: center;
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: normal;
+}
+  </style>
   <body>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
