--- a/index.html
+++ b/index.html
@@ -1,14 +1,143 @@
 <!DOCTYPE html>
-<html>
-  <style>
-    h1 {
-    text-align: center;
-    font-family: "Source Sans Pro", sans-serif;
-    font-weight: normal;
-}
-  </style>
-  <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Resume</title>
+    <meta name="description" content="My professional resume">
+    <!-- Add any additional metadata or stylesheets here -->
+</head>
+<body>
+    <header>
+        <h1>Lalima Kumari</h1>
+        <p>Web Developer</p>
+    </header>
+    <footer>
+        <section id="contact">
+        <p>Address: Bangalore, Karnataka </p>
+        <p>phone:<a href="tel:6205733996">6205733996</a></p>
+        <p>E-mail: 
+        <a href="mailto:lalimak05@gmail.com?cc=lalimak05@gmail.com&bcc=lalimak05@gmail.com&subject=Mail from our Website&body=Some body text here">lalimak05@gmail.com</a></p>
+        <p>Github: <a href="https://github.com/Lalima-tmr">https://github.com/Lalima-tmr</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/lalima-singh015/">https://www.linkedin.com/in/lalima-singh015/</a></p>
+        </section>
+    </footer>
+    <section id="experience">
+        <h2>Work Experience</h2>
+        <ul>
+            <li>
+                <h3>AiRobosoft products and services llp</h3>
+                <p>Position: Artificial Intelligence & Machine Learning Trainee</p>
+                <p>Duration: Aug,2023 - Sep,2023 </p>
+                <p>Responsibility: Developed and implemented AI algorithms to analyze problem statement with the aim of improving project accuracy. </p> 
+            </li>
+            <li>
+                <h3>UniCoverage Technology</h3>
+                <p>Position: Data Science & Machine Learning Trainee</p>
+                <p>Duration: Aug,2023 - Sep,2023 </p>
+                <p>Responsibility: Created customized applications to make critical predictions, automate reasoning and decisions and calculate optimization 
+algorithms. </p> 
+            </li>
+             <li>
+                <h3>Bolt IoT</h3>
+                <p>Position: Internet of Thing & Machine Learning Trainee</p>
+                <p>Duration: Aug,2023 - Sep,2023 </p>
+                <p>Responsibility: Developed a deep understanding of the architecture, protocols, and communication technologies that make iot systems work. </p> 
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Education</h2>
+        <p>Information Science & Engineering | Visvesvaraya Technological University, Bangalore | 
+Bachelor of Engineering</p>
+<p>Nov,2020 – Present</p>
+    </section>
+    <section class="certificate" id="certificate">
+    <h1 class="heading">featured <span>Certifications</span></h1>
+  
+    <div class="box-container">
+      <div class="box">
+        <div class="image">
+          <!--<img src="Images\certificate1.png" alt="" />-->
+          <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" /> </a>
+          <div class="content">
+            <h2>Certifications #1</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="image">
+          <!--<img src="Images/certificate2.jpeg" alt="" />-->
+          <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpg" /> </a>
+          <div class="content">
+            <h2>Certifications #2</h2>
+          </div>
+        </div>
+      </div>
+  
+      <div class="box">
+        <div class="image">
+          <!--<img src="Images/certificate3.jpeg" alt="" />-->
+          <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" /> </a>
+          <div class="content">
+            <h2>Certifications #3</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="image">
+          <img src="Images\certificate4.png" alt="" />
+          <!--<a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" /> </a>-->
+          <div class="content">
+            <h2>Certifications #4</h2>
+          </div>
+        </div>
+      </div>
+  
+      <div class="box">
+        <div class="image">
+          <!--<img src="Images/certificate5.jpeg" alt="" />-->
+          <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" /> </a>
+          <div class="content">
+            <h2>Certifications #5</h2>
+          </div>
+        </div>
+      </div>
+  
+      <div class="box">
+        <div class="image">
+          <!--<img src="Images/certificate6.jpeg" alt="" />-->
+          <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" /> </a>
+          <div class="content">
+            <h2>Certifications #6</h2>
+          </div>
+        </div>
+      </div>
+      <div class="box">
+        <div class="image">
+          <img src="Images\certificate7.png" alt="" />
+          <!--<a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate7.png" /> </a>-->
+          <div class="content">
+            <h2>Certifications #7</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="image">
+          <img src="Images\certificate8.png" alt="" />
+          <!--<a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" /> </a>-->
+          <div class="content">
+            <h2>Certifications #8</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+    <!-- Add more sections for experience, skills, projects, etc. -->
+    
+    <!-- Add any JavaScript functionality here -->
+</body>
 </html>
