--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ algorithms. </p>
         <h2>Education</h2>
         <p>Information Science & Engineering | Visvesvaraya Technological University, Bangalore | 
 Bachelor of Engineering</p>
-<p>Nov,2020 – Present</p>
+        <p>Duration: Nov,2020 – Present</p>
     </section>
     <section class="certificate" id="certificate">
     <h1 class="heading">featured <span>Certifications</span></h1>
@@ -59,10 +59,10 @@ Bachelor of Engineering</p>
       <div class="box">
         <div class="image">
           <!--<img src="Images\certificate1.png" alt="" />-->
-          <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" /> </a>
-          <div class="content">
-            <h2>Certifications #1</h2>
-          </div>
+          <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> Certifications #1 </a>
+          <!--<div class="content">
+            <h2><img src="Images\certificate4.png">Certifications #1</h2>
+          </div>-->
         </div>
       </div>
 
