--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@ Bachelor of Engineering</p>
     <div class="box-container">
       <div class="box">
         <div class="image">
+             <p>Github: <a href="https://github.com/Lalima-tmr">https://github.com/Lalima-tmr</a></p>
           <!--<img src="Images\certificate1.png" alt="" />-->
-          <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> Certifications #1 </a>
-          <!--<div class="content">
+          <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" /> </a>
+          <div class="content">
             <h2><img src="Images\certificate4.png">Certifications #1</h2>
-          </div>-->
+          </div>
         </div>
       </div>
 
