--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Lalima Kumari</h1>
-        <p>Web Developer</p>
+        <p>Fresher</p>
     </header>
     <footer>
         <section id="contact">
@@ -61,7 +61,7 @@ Bachelor of Engineering</p>
           <!--<img src="Images\certificate1.png" alt="" />-->
           <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" /> </a>
           <div class="content">
-            <h2><img src="Images\certificate4.png">Certifications #1</h2>
+            <h2>Certifications #1</h2>
           </div>
         </div>
       </div>
