--- a/index.html
+++ b/index.html
@@ -46,20 +46,48 @@ algorithms. </p>
             </li>
         </ul>
     </section>
-    <section>
+    
+  <section>
         <h2>Education</h2>
         <p>Information Science & Engineering | Visvesvaraya Technological University, Bangalore | 
 Bachelor of Engineering</p>
         <p>Duration: Nov,2020 – Present</p>
     </section>
-    <section class="certificate" id="certificate">
+
+     <section id="certificate">
+        <h2>Certifications</h2>
+        <ul>
+            <li>
+                 <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> certificate1 </a>
+            </li>
+            <li>
+                <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing">certificate2</a>
+            </li>
+             <li>
+               <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> certificate3</a>
+            </li>
+             <li>
+              <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> certificate5</a>
+            </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> certificate6</a>
+            </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing">certificate7 </a>
+            </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing">certificate8</a>
+            </li>
+        </ul>
+    </section>
+  <!--  <section class="certificate" id="certificate">
     <h1 class="heading">featured <span>Certifications</span></h1>
   
     <div class="box-container">
       <div class="box">
         <div class="image">
           <!--<img src="Images\certificate1.png" alt="" />-->
-          <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" /> </a>
+         <!-- <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" /> </a>
           <div class="content">
             <h2>Certifications #1</h2>
           </div>
@@ -69,7 +97,7 @@ Bachelor of Engineering</p>
       <div class="box">
         <div class="image">
           <!--<img src="Images/certificate2.jpeg" alt="" />-->
-          <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpg" /> </a>
+        <!--  <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpg" /> </a>
           <div class="content">
             <h2>Certifications #2</h2>
           </div>
@@ -78,8 +106,8 @@ Bachelor of Engineering</p>
   
       <div class="box">
         <div class="image">
-          <!--<img src="Images/certificate3.jpeg" alt="" />-->
-          <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" /> </a>
+         <!--<img src="Images/certificate3.jpeg" alt="" />-->
+        <!--  <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" /> </a>
           <div class="content">
             <h2>Certifications #3</h2>
           </div>
@@ -89,7 +117,7 @@ Bachelor of Engineering</p>
       <div class="box">
         <div class="image">
           <!--<img src="Images/certificate5.jpeg" alt="" />-->
-          <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" /> </a>
+       <!--   <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" /> </a>
           <div class="content">
             <h2>Certifications #4</h2>
           </div>
@@ -99,7 +127,7 @@ Bachelor of Engineering</p>
       <div class="box">
         <div class="image">
           <!--<img src="Images/certificate6.jpeg" alt="" />-->
-          <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" /> </a>
+       <!--   <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" /> </a>
           <div class="content">
             <h2>Certifications #5</h2>
           </div>
@@ -109,7 +137,7 @@ Bachelor of Engineering</p>
         <div class="image">
           <img src="Images\certificate7.png" alt="" />
           <!--<a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate7.png" /> </a>-->
-          <div class="content">
+      <!--    <div class="content">
             <h2>Certifications #6</h2>
           </div>
         </div>
@@ -119,13 +147,13 @@ Bachelor of Engineering</p>
         <div class="image">
           <img src="Images\certificate8.png" alt="" />
           <!--<a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" /> </a>-->
-          <div class="content">
+      <!--    <div class="content">
             <h2>Certifications #7</h2>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
     <!-- Add more sections for experience, skills, projects, etc. -->
     
     <!-- Add any JavaScript functionality here -->
