--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Lalima Kumari</h1>
-        <p>Fresher</p>
+        <h2>Fresher</h2>
     </header>
     <footer>
         <section id="contact">
