--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
     </header>
     <footer>
         <section id="contact">
-        <p>Address: Bangalore, Karnataka </p>
+            <table>
+                <tr>
+        <td>Address: Bangalore, Karnataka</td>
+                    <td>Github: <a href="https://github.com/Lalima-tmr">https://github.com/Lalima-tmr</a></td>
+                    </tr>
         <p>phone:<a href="tel:6205733996">6205733996</a></p>
         <p>E-mail: 
         <a href="mailto:lalimak05@gmail.com?cc=lalimak05@gmail.com&bcc=lalimak05@gmail.com&subject=Mail from our Website&body=Some body text here">lalimak05@gmail.com</a></p>
         <p>Github: <a href="https://github.com/Lalima-tmr">https://github.com/Lalima-tmr</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/lalima-singh015/">https://www.linkedin.com/in/lalima-singh015/</a></p>
+        </table>
         </section>
     </footer>
     <section id="experience">
