--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@ Bachelor of Engineering</p>
     </section>
 
      <section id="certificate">
-        <h2>Certifications</h2>
+         <table>
+        <th><h2>Certifications</h2></th>
+          <td>
         <ul>
             <li>
                  <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> certificate1 </a>
@@ -70,22 +72,36 @@ Bachelor of Engineering</p>
             <li>
                 <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing">certificate2</a>
             </li>
+        </ul>
+            </td>
+             <td>
+                 <ul>
              <li>
                <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> certificate3</a>
             </li>
              <li>
               <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> certificate5</a>
             </li>
+                 </ul>
+             </td>
+             <td>
+                 <ul>
             <li>
               <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> certificate6</a>
             </li>
             <li>
               <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing">certificate7 </a>
             </li>
+                 </ul>
+             </td>
+             <td>
+                 <ul>
             <li>
               <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing">certificate8</a>
             </li>
         </ul>
+                 </td>
+             </table>
     </section>
   <!--  <section class="certificate" id="certificate">
     <h1 class="heading">featured <span>Certifications</span></h1>
