--- a/index.html
+++ b/index.html
@@ -63,44 +63,44 @@ Bachelor of Engineering</p>
 
      <section id="certificate">
          <table>
-        <th><h2>Certifications</h2></th>
-          <td>
+       <tr> <th><h2>Certifications</h2></th></tr>
+          <tr>
         <ul>
-            <li>
+          <td> <li>
                  <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> certificate1 </a>
-            </li>
-            <li>
+            </li></td> 
+          <td>  <li>
                 <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing">certificate2</a>
-            </li>
+            </li></td>
         </ul>
-            </td>
-             <td>
+            </tr>
+             <tr>
                  <ul>
-             <li>
+            <td> <li>
                <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> certificate3</a>
-            </li>
-             <li>
+            </li></td>
+             <td><li>
               <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> certificate5</a>
-            </li>
+            </li></td>
                  </ul>
-             </td>
-             <td>
+             </tr>
+             <tr>
                  <ul>
-            <li>
+            <td><li>
               <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> certificate6</a>
-            </li>
-            <li>
+            </li></td>
+            <td><li>
               <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing">certificate7 </a>
-            </li>
+            </li></td>
                  </ul>
-             </td>
-             <td>
+             </tr>
+             <tr>
                  <ul>
-            <li>
+           <td> <li>
               <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing">certificate8</a>
-            </li>
+            </li></td>
         </ul>
-                 </td>
+                 </tr>
              </table>
     </section>
   <!--  <section class="certificate" id="certificate">
