--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <!-- Add any additional metadata or stylesheets here -->
 </head>
 <body>
-    <header>
+     <header>
+    <div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Lalima Kumari</h1>
+    <p class="lead">Fresher</p>
+  </div>
+</div>
+          </header>
+ <!--  
         <h1>Lalima Kumari</h1>
-        <p>Fresher</p>
-    </header>
+        <p>Fresher</p>-->
+   
     <footer>
         <section id="contact">
             <table>
