--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- Add any additional metadata or stylesheets here -->
 </head>
 <body>
+    <div class="container">
+  <!-- Content here -->
      <header>
     <div class="jumbotron jumbotron-fluid">
   <div class="container">
@@ -16,6 +18,7 @@
   </div>
 </div>
           </header>
+        </div>
  <!--  
         <h1>Lalima Kumari</h1>
         <p>Fresher</p>-->
