--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Add any additional metadata or stylesheets here -->
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
   <!-- Content here -->
      <header>
     <div class="jumbotron jumbotron-fluid">
