--- a/index.html
+++ b/index.html
@@ -42,7 +42,31 @@
     </footer>
     <section id="experience">
         <h2>Work Experience</h2>
-        <ul>
+        <ul class="list-unstyled">
+  <li class="media">
+    <img class="mr-3" src="https://avatars1.githubusercontent.com/u/66869709?s=200&v=4" alt="Generic placeholder image">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Artificial Intelligence & Machine Learning Trainee</h5>
+        <p>Duration: Aug,2023 - Sep,2023 </p>
+      Developed and implemented AI algorithms to analyze problem statement with the aim of improving project accuracy.
+    </div>
+  </li>
+  <li class="media my-4">
+    <img class="mr-3" src="..." alt="Generic placeholder image">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">List-based media object</h5>
+      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+    </div>
+  </li>
+  <li class="media">
+    <img class="mr-3" src="..." alt="Generic placeholder image">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">List-based media object</h5>
+      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+    </div>
+  </li>
+</ul>
+      <!--  <ul>
             <li>
                 <h3>AiRobosoft products and services llp</h3>
                 <p>Position: Artificial Intelligence & Machine Learning Trainee</p>
@@ -69,7 +93,7 @@ algorithms. </p>
         <h2>Education</h2>
         <p>Information Science & Engineering | Visvesvaraya Technological University, Bangalore | 
 Bachelor of Engineering</p>
-        <p>Duration: Nov,2020 – Present</p>
+        <p>Duration: Nov,2020 – Present</p>-->
     </section>
 
      <section id="certificate">
