--- a/index.html
+++ b/index.html
@@ -42,30 +42,34 @@
     </footer>
     <section id="experience">
         <h2>Work Experience</h2>
+        <table>
         <ul class="list-unstyled">
-  <li class="media">
-    <img class="mr-3" src="https://avatars1.githubusercontent.com/u/66869709?s=200&v=4" alt="Generic placeholder image">
-    <div class="media-body">
+ <tr> <li class="media">
+   <td> <img class="mr-3" src="https://avatars1.githubusercontent.com/u/66869709?s=200&v=4" alt="Generic placeholder image"></td>
+   <td> <div class="media-body">
       <h5 class="mt-0 mb-1">Artificial Intelligence & Machine Learning Trainee</h5>
         <p>Duration: Aug,2023 - Sep,2023 </p>
-      Developed and implemented AI algorithms to analyze problem statement with the aim of improving project accuracy.
-    </div>
-  </li>
-  <li class="media my-4">
-    <img class="mr-3" src="..." alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    </div>
-  </li>
-  <li class="media">
-    <img class="mr-3" src="..." alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    </div>
-  </li>
+        Developed and implemented AI algorithms to analyze problem statement with the aim of improving project accuracy.
+    </div></td>
+  </li></tr>
+  <tr><li class="media my-4">
+   <td> <img class="mr-3" src="..." alt="Generic placeholder image"></td>
+   <td> <div class="media-body">
+      <h5 class="mt-0 mb-1">Data Science & Machine Learning Trainee</h5>
+        <p>Duration: Aug,2023 - Sep,2023 </p>
+        Created customized applications to make critical predictions, automate reasoning and decisions and calculate optimization algorithms.
+    </div></td>
+  </li></tr>
+ <tr> <li class="media">
+   <td><img class="mr-3" src="..." alt="Generic placeholder image"></td> 
+    <td> <div class="media-body">
+      <h5 class="mt-0 mb-1">Internet of Thing & Machine Learning Trainee</h5>
+        <p>Duration: Aug,2023 - Sep,2023 </p>
+        Developed a deep understanding of the architecture, protocols, and communication technologies that make iot systems work. 
+    </div></td>
+  </li></tr>
 </ul>
+ </table>
       <!--  <ul>
             <li>
                 <h3>AiRobosoft products and services llp</h3>
@@ -87,13 +91,13 @@ algorithms. </p>
                 <p>Responsibility: Developed a deep understanding of the architecture, protocols, and communication technologies that make iot systems work. </p> 
             </li>
         </ul>
-    </section>
+    </section>-->
     
   <section>
         <h2>Education</h2>
         <p>Information Science & Engineering | Visvesvaraya Technological University, Bangalore | 
 Bachelor of Engineering</p>
-        <p>Duration: Nov,2020 – Present</p>-->
+        <p>Duration: Nov,2020 – Present</p>
     </section>
 
      <section id="certificate">
