--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div></td>
   </li></tr>
   <tr><li class="media my-4">
-   <td> <img class="mr-3" src="..." alt="Generic placeholder image"></td>
+   <td> <img class="mr-3" src="https://media.licdn.com/dms/image/C4D0BAQFRSUGt3tEO0w/company-logo_200_200/0/1672649984389?e=2147483647&v=beta&t=ZN33Sp5-3zYNYNOJp_KzrABv9PcNltzjSL3MUSbY6iM" alt="Generic placeholder image"></td>
    <td> <div class="media-body">
       <h5 class="mt-0 mb-1">Data Science & Machine Learning Trainee</h5>
         <p>Duration: Aug,2023 - Sep,2023 </p>
@@ -61,7 +61,7 @@
     </div></td>
   </li></tr>
  <tr> <li class="media">
-   <td><img class="mr-3" src="..." alt="Generic placeholder image"></td> 
+   <td><img class="mr-3" src="https://th.bing.com/th/id/OIP.dMEjpJ4z8mcGjij-jS1xTgHaHk?rs=1&pid=ImgDetMain" alt="Generic placeholder image"></td> 
     <td> <div class="media-body">
       <h5 class="mt-0 mb-1">Internet of Thing & Machine Learning Trainee</h5>
         <p>Duration: Aug,2023 - Sep,2023 </p>
