--- a/index.html
+++ b/index.html
@@ -44,30 +44,30 @@
         <h2>Work Experience</h2>
         <table>
         <ul class="list-unstyled">
- <tr> <li class="media">
+ <tr class="media">
    <td> <img class="mr-3" src="https://avatars1.githubusercontent.com/u/66869709?s=200&v=4" alt="Generic placeholder image"></td>
    <td> <div class="media-body">
       <h5 class="mt-0 mb-1">Artificial Intelligence & Machine Learning Trainee</h5>
         <p>Duration: Aug,2023 - Sep,2023 </p>
         Developed and implemented AI algorithms to analyze problem statement with the aim of improving project accuracy.
     </div></td>
-  </li></tr>
-  <tr><li class="media my-4">
+  </tr>
+  <tr class="media my-4">
    <td> <img class="mr-3" src="https://media.licdn.com/dms/image/C4D0BAQFRSUGt3tEO0w/company-logo_200_200/0/1672649984389?e=2147483647&v=beta&t=ZN33Sp5-3zYNYNOJp_KzrABv9PcNltzjSL3MUSbY6iM" alt="Generic placeholder image"></td>
    <td> <div class="media-body">
       <h5 class="mt-0 mb-1">Data Science & Machine Learning Trainee</h5>
         <p>Duration: Aug,2023 - Sep,2023 </p>
         Created customized applications to make critical predictions, automate reasoning and decisions and calculate optimization algorithms.
     </div></td>
-  </li></tr>
- <tr> <li class="media">
+  </tr>
+ <tr class="media">
    <td><img class="mr-3" src="https://th.bing.com/th/id/OIP.dMEjpJ4z8mcGjij-jS1xTgHaHk?rs=1&pid=ImgDetMain" alt="Generic placeholder image"></td> 
     <td> <div class="media-body">
       <h5 class="mt-0 mb-1">Internet of Thing & Machine Learning Trainee</h5>
         <p>Duration: Aug,2023 - Sep,2023 </p>
         Developed a deep understanding of the architecture, protocols, and communication technologies that make iot systems work. 
     </div></td>
-  </li></tr>
+  </tr>
 </ul>
  </table>
       <!--  <ul>
@@ -104,70 +104,70 @@ Bachelor of Engineering</p>
          <table>
        <tr> <th><h2>Certifications</h2></th></tr>
           <tr>
-        <ul>
-          <td> <li>
+              
+        <ul class="list-inline">
+          <td> <li class="list-inline-item">
                  <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> certificate1 </a>
+              <div class="content">
+                    <h2>Certifications #1</h2>
+                </div>
             </li></td> 
-          <td>  <li>
+          <td>  <li class="list-inline-item">
                 <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing">certificate2</a>
-            </li></td>
+          <div class="content">
+                    <h2>Certifications #2</h2>
+                </div>  
+          </li></td>
         </ul>
             </tr>
              <tr>
-                 <ul>
-            <td> <li>
-               <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> certificate3</a>
+                 <ul class="list-inline">
+            <td> <li class="list-inline-item">
+               <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" /></a>
+                <div class="content">
+                    <h2>Certifications #3</h2>
+                </div>
             </li></td>
-             <td><li>
-              <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> certificate5</a>
-            </li></td>
-                 </ul>
-             </tr>
-             <tr>
-                 <ul>
-            <td><li>
-              <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> certificate6</a>
-            </li></td>
-            <td><li>
-              <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing">certificate7 </a>
+             <td><li class="list-inline-item">
+              <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" /></a>
+                 <div class="content">
+                    <h2>Certifications #4</h2>
+                </div>
             </li></td>
                  </ul>
              </tr>
              <tr>
-                 <ul>
-           <td> <li>
-              <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing">certificate8</a>
+                 <ul class="list-inline">
+            <td><li class="list-inline-item">
+              <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" /></a>
+                <div class="content">
+                    <h2>Certifications #5</h2>
+                </div>
+            </li></td>
+            <td><li class="list-inline-item">
+              <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"><img src="Images\certificate7.png" /> </a>
+                 <div class="content">
+                    <h2>Certifications #6</h2>
+                </div>
+            </li></td>
+                 </ul>
+             </tr>
+             <tr>
+                 <ul class="list-inline">
+           <td> <li class="list-inline-item">
+              <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" /></a>
+               <div class="content">
+            <h2>Certifications #7</h2>
+          </div>
             </li></td>
         </ul>
                  </tr>
              </table>
     </section>
-  <!--  <section class="certificate" id="certificate">
-    <h1 class="heading">featured <span>Certifications</span></h1>
-  
-    <div class="box-container">
-      <div class="box">
-        <div class="image">
-          <!--<img src="Images\certificate1.png" alt="" />-->
-         <!-- <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" /> </a>
-          <div class="content">
-            <h2>Certifications #1</h2>
-          </div>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <!--<img src="Images/certificate2.jpeg" alt="" />-->
-        <!--  <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpg" /> </a>
-          <div class="content">
-            <h2>Certifications #2</h2>
-          </div>
-        </div>
-      </div>
-  
-      <div class="box">
-        <div class="image">
+  </body>
+</html>
+     <!-- <div class="box">
+        <div class="image">-->
          <!--<img src="Images/certificate3.jpeg" alt="" />-->
         <!--  <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" /> </a>
           <div class="content">
@@ -219,5 +219,4 @@ Bachelor of Engineering</p>
     <!-- Add more sections for experience, skills, projects, etc. -->
     
     <!-- Add any JavaScript functionality here -->
-</body>
-</html>
+
