--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </table>
         </section>
     </footer>
+    
     <section id="experience">
         <h2>Work Experience</h2>
         <table>
@@ -70,28 +71,7 @@
   </tr>
 </ul>
  </table>
-      <!--  <ul>
-            <li>
-                <h3>AiRobosoft products and services llp</h3>
-                <p>Position: Artificial Intelligence & Machine Learning Trainee</p>
-                <p>Duration: Aug,2023 - Sep,2023 </p>
-                <p>Responsibility: Developed and implemented AI algorithms to analyze problem statement with the aim of improving project accuracy. </p> 
-            </li>
-            <li>
-                <h3>UniCoverage Technology</h3>
-                <p>Position: Data Science & Machine Learning Trainee</p>
-                <p>Duration: Aug,2023 - Sep,2023 </p>
-                <p>Responsibility: Created customized applications to make critical predictions, automate reasoning and decisions and calculate optimization 
-algorithms. </p> 
-            </li>
-             <li>
-                <h3>Bolt IoT</h3>
-                <p>Position: Internet of Thing & Machine Learning Trainee</p>
-                <p>Duration: Aug,2023 - Sep,2023 </p>
-                <p>Responsibility: Developed a deep understanding of the architecture, protocols, and communication technologies that make iot systems work. </p> 
-            </li>
-        </ul>
-    </section>-->
+    </section> 
     
   <section>
         <h2>Education</h2>
@@ -109,13 +89,13 @@ Bachelor of Engineering</p>
           <td> <li class="list-inline-item">
                  <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> certificate1 </a>
               <div class="content">
-                    <h2>Certifications #1</h2>
+                    <h4>Certifications #1</h4>
                 </div>
             </li></td> 
           <td>  <li class="list-inline-item">
                 <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing">certificate2</a>
           <div class="content">
-                    <h2>Certifications #2</h2>
+                    <h4>Certifications #2</h4>
                 </div>  
           </li></td>
         </ul>
@@ -125,13 +105,13 @@ Bachelor of Engineering</p>
             <td> <li class="list-inline-item">
                <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" /></a>
                 <div class="content">
-                    <h2>Certifications #3</h2>
+                    <h4>Certifications #3</h4>
                 </div>
             </li></td>
              <td><li class="list-inline-item">
               <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" /></a>
                  <div class="content">
-                    <h2>Certifications #4</h2>
+                    <h4>Certifications #4</h4>
                 </div>
             </li></td>
                  </ul>
@@ -141,13 +121,13 @@ Bachelor of Engineering</p>
             <td><li class="list-inline-item">
               <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" /></a>
                 <div class="content">
-                    <h2>Certifications #5</h2>
+                    <h4>Certifications #5</h4>
                 </div>
             </li></td>
             <td><li class="list-inline-item">
               <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"><img src="Images\certificate7.png" /> </a>
                  <div class="content">
-                    <h2>Certifications #6</h2>
+                    <h4>Certifications #6</h4>
                 </div>
             </li></td>
                  </ul>
@@ -157,14 +137,15 @@ Bachelor of Engineering</p>
            <td> <li class="list-inline-item">
               <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" /></a>
                <div class="content">
-            <h2>Certifications #7</h2>
+            <h4>Certifications #7</h4>
           </div>
             </li></td>
         </ul>
                  </tr>
              </table>
     </section>
-  </body>
+ 
+</body>
 </html>
      <!-- <div class="box">
         <div class="image">-->
