--- a/index.html
+++ b/index.html
@@ -86,60 +86,66 @@ Bachelor of Engineering</p>
           <tr>
               
         <ul class="list-inline">
-          <td> <li class="list-inline-item">
+          <td class="list-inline-item">
                  <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> certificate1 </a>
               <div class="content">
                     <h4>Certifications #1</h4>
                 </div>
-            </li></td> 
-          <td>  <li class="list-inline-item">
+           </td> 
+          <td class="list-inline-item">
                 <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing">certificate2</a>
           <div class="content">
                     <h4>Certifications #2</h4>
                 </div>  
-          </li></td>
+          </td>
         </ul>
             </tr>
              <tr>
                  <ul class="list-inline">
-            <td> <li class="list-inline-item">
+            <td class="list-inline-item">
                <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" /></a>
                 <div class="content">
                     <h4>Certifications #3</h4>
                 </div>
-            </li></td>
-             <td><li class="list-inline-item">
+            </td>
+             <td class="list-inline-item">
               <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" /></a>
                  <div class="content">
                     <h4>Certifications #4</h4>
                 </div>
-            </li></td>
+            </td>
                  </ul>
              </tr>
              <tr>
                  <ul class="list-inline">
-            <td><li class="list-inline-item">
+            <td class="list-inline-item">
               <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" /></a>
                 <div class="content">
                     <h4>Certifications #5</h4>
                 </div>
-            </li></td>
-            <td><li class="list-inline-item">
+           </td>
+            <td class="list-inline-item">
               <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"><img src="Images\certificate7.png" /> </a>
                  <div class="content">
                     <h4>Certifications #6</h4>
                 </div>
-            </li></td>
+            </td>
                  </ul>
              </tr>
              <tr>
                  <ul class="list-inline">
-           <td> <li class="list-inline-item">
+           <td class="list-inline-item">
               <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" /></a>
                <div class="content">
             <h4>Certifications #7</h4>
           </div>
-            </li></td>
+           </td>
+            <td class="list-inline-item">
+              <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" /></a>
+               <div class="content">
+            <h4>Certifications #8</h4>
+          </div>
+            </td>
         </ul>
                  </tr>
              </table>
